[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/atlas_gui.png" type="Texture" id=1]
[ext_resource path="res://assets/theme/font_body.tres" type="DynamicFont" id=2]
[ext_resource path="res://home/credits_line.gd" type="Script" id=3]
[ext_resource path="res://assets/resources/icon_label_dot.tres" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=283]
atlas = ExtResource( 1 )
region = Rect2( 0, 80, 22, 16 )
margin = Rect2( 2, 0, 0, 0 )

[node name="CreditsLine" type="HBoxContainer"]
margin_top = 32.0
margin_right = 188.0
margin_bottom = 56.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
custom_constants/separation = 8
script = ExtResource( 3 )

[node name="Dot" type="TextureRect" parent="."]
margin_right = 6.0
margin_bottom = 18.0
size_flags_vertical = 0
texture = ExtResource( 4 )

[node name="NameAuthor" type="Label" parent="."]
margin_left = 14.0
margin_right = 133.0
margin_bottom = 24.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
text = "Name / Author"
valign = 1

[node name="WebLinkBtn" type="Button" parent="."]
margin_left = 141.0
margin_right = 177.0
margin_bottom = 24.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 2 )
text = "link"
icon = SubResource( 283 )
flat = true
clip_text = true
align = 0

[connection signal="pressed" from="WebLinkBtn" to="." method="_on_WebLinkBtn_pressed"]
